src/main/antlr/.antlr/SHRValueSetParser.java
// Generated from /Users/kmahalingam/standardhealth/shr-grammar/src/main/antlr/SHRValueSetParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SHRValueSetParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_GRAMMAR=1, KW_G_VALUE_SET=2, KW_NAMESPACE=3, KW_VOCABULARY=4, KW_VALUESET=5, 
		KW_INCLUDES_CODES_FROM=6, KW_INCLUDES_CODES_DESCENDING_FROM=7, KW_AND_NOT_DESCENDING_FROM=8, 
		KW_CONCEPT=9, KW_DESCRIPTION=10, KW_TBD=11, KW_TBD_CODE=12, DOT=13, EQUAL=14, 
		COMMA=15, URL=16, URN_OID=17, URN=18, CODE=19, WHOLE_NUMBER=20, ALL_CAPS=21, 
		UPPER_WORD=22, LOWER_WORD=23, DOT_SEPARATED_LW=24, DOT_SEPARATED_UW=25, 
		STRING=26, WS=27, NEWLINE=28, COMMENT=29, LINE_COMMENT=30;
	public static final int
		RULE_doc = 0, RULE_docHeader = 1, RULE_vocabularyDefs = 2, RULE_vocabularyDef = 3, 
		RULE_valuesetDefs = 4, RULE_valuesetDef = 5, RULE_valuesetHeader = 6, 
		RULE_valuesetValues = 7, RULE_valuesetValue = 8, RULE_valuesetInlineValue = 9, 
		RULE_valuesetDescendingFrom = 10, RULE_valuesetFromCodeSystem = 11, RULE_valuesetFromCode = 12, 
		RULE_valuesetProps = 13, RULE_valuesetProp = 14, RULE_conceptProp = 15, 
		RULE_concepts = 16, RULE_descriptionProp = 17, RULE_version = 18, RULE_namespace = 19, 
		RULE_simpleName = 20, RULE_code = 21, RULE_fullyQualifiedCode = 22, RULE_tbd = 23, 
		RULE_tbdCode = 24;
	public static final String[] ruleNames = {
		"doc", "docHeader", "vocabularyDefs", "vocabularyDef", "valuesetDefs", 
		"valuesetDef", "valuesetHeader", "valuesetValues", "valuesetValue", "valuesetInlineValue", 
		"valuesetDescendingFrom", "valuesetFromCodeSystem", "valuesetFromCode", 
		"valuesetProps", "valuesetProp", "conceptProp", "concepts", "descriptionProp", 
		"version", "namespace", "simpleName", "code", "fullyQualifiedCode", "tbd", 
		"tbdCode"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Grammar:'", "'ValueSet'", "'Namespace:'", "'CodeSystem:'", "'ValueSet:'", 
		"'Includes codes from'", "'Includes codes descending from'", "'and not descending from'", 
		"'Concept:'", "'Description:'", "'TBD'", "'TBD#TBD'", "'.'", "'='", "','", 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"'\n'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "KW_GRAMMAR", "KW_G_VALUE_SET", "KW_NAMESPACE", "KW_VOCABULARY", 
		"KW_VALUESET", "KW_INCLUDES_CODES_FROM", "KW_INCLUDES_CODES_DESCENDING_FROM", 
		"KW_AND_NOT_DESCENDING_FROM", "KW_CONCEPT", "KW_DESCRIPTION", "KW_TBD", 
		"KW_TBD_CODE", "DOT", "EQUAL", "COMMA", "URL", "URN_OID", "URN", "CODE", 
		"WHOLE_NUMBER", "ALL_CAPS", "UPPER_WORD", "LOWER_WORD", "DOT_SEPARATED_LW", 
		"DOT_SEPARATED_UW", "STRING", "WS", "NEWLINE", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SHRValueSetParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SHRValueSetParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DocContext extends ParserRuleContext {
		public DocHeaderContext docHeader() {
			return getRuleContext(DocHeaderContext.class,0);
		}
		public ValuesetDefsContext valuesetDefs() {
			return getRuleContext(ValuesetDefsContext.class,0);
		}
		public VocabularyDefsContext vocabularyDefs() {
			return getRuleContext(VocabularyDefsContext.class,0);
		}
		public DocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doc; }
	}

	public final DocContext doc() throws RecognitionException {
		DocContext _localctx = new DocContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_doc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			docHeader();
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_VOCABULARY) {
				{
				setState(51);
				vocabularyDefs();
				}
			}

			setState(54);
			valuesetDefs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocHeaderContext extends ParserRuleContext {
		public TerminalNode KW_GRAMMAR() { return getToken(SHRValueSetParser.KW_GRAMMAR, 0); }
		public TerminalNode KW_G_VALUE_SET() { return getToken(SHRValueSetParser.KW_G_VALUE_SET, 0); }
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public TerminalNode KW_NAMESPACE() { return getToken(SHRValueSetParser.KW_NAMESPACE, 0); }
		public NamespaceContext namespace() {
			return getRuleContext(NamespaceContext.class,0);
		}
		public DocHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_docHeader; }
	}

	public final DocHeaderContext docHeader() throws RecognitionException {
		DocHeaderContext _localctx = new DocHeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_docHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(KW_GRAMMAR);
			setState(57);
			match(KW_G_VALUE_SET);
			setState(58);
			version();
			setState(59);
			match(KW_NAMESPACE);
			setState(60);
			namespace();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VocabularyDefsContext extends ParserRuleContext {
		public List<VocabularyDefContext> vocabularyDef() {
			return getRuleContexts(VocabularyDefContext.class);
		}
		public VocabularyDefContext vocabularyDef(int i) {
			return getRuleContext(VocabularyDefContext.class,i);
		}
		public VocabularyDefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vocabularyDefs; }
	}

	public final VocabularyDefsContext vocabularyDefs() throws RecognitionException {
		VocabularyDefsContext _localctx = new VocabularyDefsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_vocabularyDefs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62);
				vocabularyDef();
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KW_VOCABULARY );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VocabularyDefContext extends ParserRuleContext {
		public TerminalNode KW_VOCABULARY() { return getToken(SHRValueSetParser.KW_VOCABULARY, 0); }
		public TerminalNode ALL_CAPS() { return getToken(SHRValueSetParser.ALL_CAPS, 0); }
		public TerminalNode EQUAL() { return getToken(SHRValueSetParser.EQUAL, 0); }
		public TerminalNode URL() { return getToken(SHRValueSetParser.URL, 0); }
		public TerminalNode URN_OID() { return getToken(SHRValueSetParser.URN_OID, 0); }
		public TerminalNode URN() { return getToken(SHRValueSetParser.URN, 0); }
		public VocabularyDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vocabularyDef; }
	}

	public final VocabularyDefContext vocabularyDef() throws RecognitionException {
		VocabularyDefContext _localctx = new VocabularyDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_vocabularyDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(KW_VOCABULARY);
			setState(68);
			match(ALL_CAPS);
			setState(69);
			match(EQUAL);
			setState(70);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << URL) | (1L << URN_OID) | (1L << URN))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesetDefsContext extends ParserRuleContext {
		public List<ValuesetDefContext> valuesetDef() {
			return getRuleContexts(ValuesetDefContext.class);
		}
		public ValuesetDefContext valuesetDef(int i) {
			return getRuleContext(ValuesetDefContext.class,i);
		}
		public ValuesetDefsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuesetDefs; }
	}

	public final ValuesetDefsContext valuesetDefs() throws RecognitionException {
		ValuesetDefsContext _localctx = new ValuesetDefsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_valuesetDefs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_VALUESET) {
				{
				{
				setState(72);
				valuesetDef();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesetDefContext extends ParserRuleContext {
		public ValuesetHeaderContext valuesetHeader() {
			return getRuleContext(ValuesetHeaderContext.class,0);
		}
		public ValuesetPropsContext valuesetProps() {
			return getRuleContext(ValuesetPropsContext.class,0);
		}
		public ValuesetValuesContext valuesetValues() {
			return getRuleContext(ValuesetValuesContext.class,0);
		}
		public ValuesetDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuesetDef; }
	}

	public final ValuesetDefContext valuesetDef() throws RecognitionException {
		ValuesetDefContext _localctx = new ValuesetDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_valuesetDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			valuesetHeader();
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KW_CONCEPT || _la==KW_DESCRIPTION) {
				{
				setState(79);
				valuesetProps();
				}
			}

			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_INCLUDES_CODES_FROM) | (1L << KW_INCLUDES_CODES_DESCENDING_FROM) | (1L << KW_TBD_CODE) | (1L << CODE) | (1L << ALL_CAPS))) != 0)) {
				{
				setState(82);
				valuesetValues();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesetHeaderContext extends ParserRuleContext {
		public TerminalNode KW_VALUESET() { return getToken(SHRValueSetParser.KW_VALUESET, 0); }
		public TerminalNode URL() { return getToken(SHRValueSetParser.URL, 0); }
		public TerminalNode URN_OID() { return getToken(SHRValueSetParser.URN_OID, 0); }
		public SimpleNameContext simpleName() {
			return getRuleContext(SimpleNameContext.class,0);
		}
		public ValuesetHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuesetHeader; }
	}

	public final ValuesetHeaderContext valuesetHeader() throws RecognitionException {
		ValuesetHeaderContext _localctx = new ValuesetHeaderContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_valuesetHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(KW_VALUESET);
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case URL:
				{
				setState(86);
				match(URL);
				}
				break;
			case URN_OID:
				{
				setState(87);
				match(URN_OID);
				}
				break;
			case ALL_CAPS:
			case UPPER_WORD:
				{
				setState(88);
				simpleName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesetValuesContext extends ParserRuleContext {
		public List<ValuesetValueContext> valuesetValue() {
			return getRuleContexts(ValuesetValueContext.class);
		}
		public ValuesetValueContext valuesetValue(int i) {
			return getRuleContext(ValuesetValueContext.class,i);
		}
		public ValuesetValuesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuesetValues; }
	}

	public final ValuesetValuesContext valuesetValues() throws RecognitionException {
		ValuesetValuesContext _localctx = new ValuesetValuesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_valuesetValues);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(91);
				valuesetValue();
				}
				}
				setState(94); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << KW_INCLUDES_CODES_FROM) | (1L << KW_INCLUDES_CODES_DESCENDING_FROM) | (1L << KW_TBD_CODE) | (1L << CODE) | (1L << ALL_CAPS))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesetValueContext extends ParserRuleContext {
		public FullyQualifiedCodeContext fullyQualifiedCode() {
			return getRuleContext(FullyQualifiedCodeContext.class,0);
		}
		public ValuesetInlineValueContext valuesetInlineValue() {
			return getRuleContext(ValuesetInlineValueContext.class,0);
		}
		public ValuesetDescendingFromContext valuesetDescendingFrom() {
			return getRuleContext(ValuesetDescendingFromContext.class,0);
		}
		public ValuesetFromCodeContext valuesetFromCode() {
			return getRuleContext(ValuesetFromCodeContext.class,0);
		}
		public ValuesetFromCodeSystemContext valuesetFromCodeSystem() {
			return getRuleContext(ValuesetFromCodeSystemContext.class,0);
		}
		public ValuesetValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuesetValue; }
	}

	public final ValuesetValueContext valuesetValue() throws RecognitionException {
		ValuesetValueContext _localctx = new ValuesetValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_valuesetValue);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				fullyQualifiedCode();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				valuesetInlineValue();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				valuesetDescendingFrom();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(99);
				valuesetFromCode();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(100);
				valuesetFromCodeSystem();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesetInlineValueContext extends ParserRuleContext {
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public ValuesetInlineValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuesetInlineValue; }
	}

	public final ValuesetInlineValueContext valuesetInlineValue() throws RecognitionException {
		ValuesetInlineValueContext _localctx = new ValuesetInlineValueContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_valuesetInlineValue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			code();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesetDescendingFromContext extends ParserRuleContext {
		public TerminalNode KW_INCLUDES_CODES_DESCENDING_FROM() { return getToken(SHRValueSetParser.KW_INCLUDES_CODES_DESCENDING_FROM, 0); }
		public List<FullyQualifiedCodeContext> fullyQualifiedCode() {
			return getRuleContexts(FullyQualifiedCodeContext.class);
		}
		public FullyQualifiedCodeContext fullyQualifiedCode(int i) {
			return getRuleContext(FullyQualifiedCodeContext.class,i);
		}
		public List<TerminalNode> KW_AND_NOT_DESCENDING_FROM() { return getTokens(SHRValueSetParser.KW_AND_NOT_DESCENDING_FROM); }
		public TerminalNode KW_AND_NOT_DESCENDING_FROM(int i) {
			return getToken(SHRValueSetParser.KW_AND_NOT_DESCENDING_FROM, i);
		}
		public ValuesetDescendingFromContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuesetDescendingFrom; }
	}

	public final ValuesetDescendingFromContext valuesetDescendingFrom() throws RecognitionException {
		ValuesetDescendingFromContext _localctx = new ValuesetDescendingFromContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_valuesetDescendingFrom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(KW_INCLUDES_CODES_DESCENDING_FROM);
			setState(106);
			fullyQualifiedCode();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KW_AND_NOT_DESCENDING_FROM) {
				{
				{
				setState(107);
				match(KW_AND_NOT_DESCENDING_FROM);
				setState(108);
				fullyQualifiedCode();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesetFromCodeSystemContext extends ParserRuleContext {
		public TerminalNode KW_INCLUDES_CODES_FROM() { return getToken(SHRValueSetParser.KW_INCLUDES_CODES_FROM, 0); }
		public TerminalNode ALL_CAPS() { return getToken(SHRValueSetParser.ALL_CAPS, 0); }
		public ValuesetFromCodeSystemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuesetFromCodeSystem; }
	}

	public final ValuesetFromCodeSystemContext valuesetFromCodeSystem() throws RecognitionException {
		ValuesetFromCodeSystemContext _localctx = new ValuesetFromCodeSystemContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_valuesetFromCodeSystem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(KW_INCLUDES_CODES_FROM);
			setState(115);
			match(ALL_CAPS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesetFromCodeContext extends ParserRuleContext {
		public TerminalNode KW_INCLUDES_CODES_FROM() { return getToken(SHRValueSetParser.KW_INCLUDES_CODES_FROM, 0); }
		public FullyQualifiedCodeContext fullyQualifiedCode() {
			return getRuleContext(FullyQualifiedCodeContext.class,0);
		}
		public ValuesetFromCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuesetFromCode; }
	}

	public final ValuesetFromCodeContext valuesetFromCode() throws RecognitionException {
		ValuesetFromCodeContext _localctx = new ValuesetFromCodeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_valuesetFromCode);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(KW_INCLUDES_CODES_FROM);
			setState(118);
			fullyQualifiedCode();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesetPropsContext extends ParserRuleContext {
		public List<ValuesetPropContext> valuesetProp() {
			return getRuleContexts(ValuesetPropContext.class);
		}
		public ValuesetPropContext valuesetProp(int i) {
			return getRuleContext(ValuesetPropContext.class,i);
		}
		public ValuesetPropsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuesetProps; }
	}

	public final ValuesetPropsContext valuesetProps() throws RecognitionException {
		ValuesetPropsContext _localctx = new ValuesetPropsContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_valuesetProps);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(120);
				valuesetProp();
				}
				}
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KW_CONCEPT || _la==KW_DESCRIPTION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValuesetPropContext extends ParserRuleContext {
		public ConceptPropContext conceptProp() {
			return getRuleContext(ConceptPropContext.class,0);
		}
		public DescriptionPropContext descriptionProp() {
			return getRuleContext(DescriptionPropContext.class,0);
		}
		public ValuesetPropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valuesetProp; }
	}

	public final ValuesetPropContext valuesetProp() throws RecognitionException {
		ValuesetPropContext _localctx = new ValuesetPropContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_valuesetProp);
		try {
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_CONCEPT:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				conceptProp();
				}
				break;
			case KW_DESCRIPTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				descriptionProp();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConceptPropContext extends ParserRuleContext {
		public TerminalNode KW_CONCEPT() { return getToken(SHRValueSetParser.KW_CONCEPT, 0); }
		public ConceptsContext concepts() {
			return getRuleContext(ConceptsContext.class,0);
		}
		public TbdContext tbd() {
			return getRuleContext(TbdContext.class,0);
		}
		public ConceptPropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conceptProp; }
	}

	public final ConceptPropContext conceptProp() throws RecognitionException {
		ConceptPropContext _localctx = new ConceptPropContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_conceptProp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(KW_CONCEPT);
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_TBD_CODE:
			case ALL_CAPS:
				{
				setState(130);
				concepts();
				}
				break;
			case KW_TBD:
				{
				setState(131);
				tbd();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConceptsContext extends ParserRuleContext {
		public List<FullyQualifiedCodeContext> fullyQualifiedCode() {
			return getRuleContexts(FullyQualifiedCodeContext.class);
		}
		public FullyQualifiedCodeContext fullyQualifiedCode(int i) {
			return getRuleContext(FullyQualifiedCodeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SHRValueSetParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SHRValueSetParser.COMMA, i);
		}
		public ConceptsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concepts; }
	}

	public final ConceptsContext concepts() throws RecognitionException {
		ConceptsContext _localctx = new ConceptsContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_concepts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			fullyQualifiedCode();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(135);
				match(COMMA);
				setState(136);
				fullyQualifiedCode();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionPropContext extends ParserRuleContext {
		public TerminalNode KW_DESCRIPTION() { return getToken(SHRValueSetParser.KW_DESCRIPTION, 0); }
		public TerminalNode STRING() { return getToken(SHRValueSetParser.STRING, 0); }
		public DescriptionPropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_descriptionProp; }
	}

	public final DescriptionPropContext descriptionProp() throws RecognitionException {
		DescriptionPropContext _localctx = new DescriptionPropContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_descriptionProp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(KW_DESCRIPTION);
			setState(143);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VersionContext extends ParserRuleContext {
		public List<TerminalNode> WHOLE_NUMBER() { return getTokens(SHRValueSetParser.WHOLE_NUMBER); }
		public TerminalNode WHOLE_NUMBER(int i) {
			return getToken(SHRValueSetParser.WHOLE_NUMBER, i);
		}
		public TerminalNode DOT() { return getToken(SHRValueSetParser.DOT, 0); }
		public VersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version; }
	}
